Re estructuracion modulo de historial medico

--- a/src/app/view/ventas/generar-venta/generar-venta.component.html
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.html
@@ -968,7 +968,7 @@
                                     <option value="contado">De contado</option>
                                     <option value="abono">Abono parcial</option>
                                     <option value="cashea">Cashea</option>
-                                    <option value="pendiente">De contado - Pendiente por pago</option>
+                                    <option value="de_contado-pendiente">De contado - Pendiente por pago</option>
                                 </select>
                             </div>
 
